<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.peter.activitylab.MainActivity">

    <TextView
        android:text="@string/onCreate"
        android:layout_width="match_parent"
        android:id="@+id/onCreate"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_horizontal" />

    <TextView
        android:text="@string/onStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/onCreate"
        android:layout_alignParentStart="true"
        android:id="@+id/onStart" />

    <TextView
        android:text="@string/onResume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/onStart"
        android:layout_alignParentStart="true"
        android:id="@+id/onResume" />

    <TextView
        android:text="@string/onRestart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/onResume"
        android:layout_alignParentStart="true"
        android:id="@+id/onRestart" />

    <Button
        android:text="@string/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/onRestart"
        android:layout_alignParentStart="true"
        android:id="@+id/startButton"
        android:autoText="false"
        android:textAllCaps="false" />

</RelativeLayout>
